--- a/.htaccess
+++ b/.htaccess
@@ -12,6 +12,6 @@
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride All
                 Order allow,deny
-                allow from one
+                allow from all
 </Directory> 
 </VirtualHost>
